# project

./: CMakeLists.txt  README.md  main.cpp
math/: CMakeLists.txt  main.cpp
math/include/math/: evaluator.h
math/src/: evaluator.cpp
math/tests/: test_evaluator.cpp
ui/: main.cpp
